# kanae

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .shellcheckrc  LICENSE  README.md  TESTING_PLAN.md  atlas.hcl  config-example.yml  config.dist.yml  core.py  garage.dist.toml  garage.toml  gunicorn.conf.py  launcher.py  lefthook.yml  logging.conf.json  mise.toml  pyproject.toml  requirements-dev.txt  requirements.txt  taskfile.yml  test.py  test.sql  tox.ini
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPALTE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: atlas-push.yml  atlas.yml  atlas.yml.disabled  auto-approve.yml  codeql.yml  dependabot-auto-merge.yml  docker.yml  integration-test.yml  lint.yml  release.yml  test.yml
deploy/: kanae.service  kanae.socket  launcher.sh
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.prod..yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  example.env  garage-init.sh  prometheus.yml  start.sh  supertokens-seed.sql
docker/ory/: docker-compose.yml  init.sh  init.sql
docker/ory/config/keto/: keto.yml  namespaces.keto.ts
docker/ory/config/kratos/: identity.schema.json  kratos.yml
docker/ory/config/kratos/hooks/: payload.jsonnet
docker/pg-test/: Dockerfile
routes/: user.py
scripts/: derive-webhook-tokens.py  generate-openapi.py  test-flow.sh  test-images.sh
scripts/seed/: init.sh  vars.env
scripts/seed/data/: events.json  members.json  projects.json  tags.json
server/: __init__.py  core.py  launcher.py  migrations.py  projects.py  schema.sql  tags.py
server/migrations/: V1__initial_migration.sql  V2__member_emails.sql  V3__projects.sql  V4__attendance_hash.sql
server/migrations-old/: V2__member_changes.sql
server/routes/: __init__.py  events.py  index.py  members.py  projects.py  tags.py  user.py
server/tests/: conftest.py  test_limiter.py  test_main.py  test_ping.py
server/utils/: auth.py  checks.py  config.py  errors.py  exceptions.py  glide.py  handler.py  ory.py  pages.py  prometheus.py  request.py  responses.py  roles.py  router.py  server.py  workers.py
server/utils/limiter/: __init__.py  errors.py  extension.py  middleware.py  utils.py
server/utils/responses/: __init__.py  errors.py  exceptions.py  orjson.py  success.py
server/utils/supertokens/: request.py  session.py  verify.py
server/utils/uvicorn/: config.py  server.py  workers.py
src/: core.py  main.py  schema.sql
src/routes/: events.py  index.py  members.py  projects.py  sudo.py  tags.py
src/utils/: cache.py  checks.py  errors.py  glide.py  ory.py  pages.py  request.py  responses.py  router.py  storage.py
src/utils/limiter/: __init__.py  extension.py  middleware.py  storage.py
tests/: conftest.py  test_events.py  test_fuzz_schemathesis.py  test_limiter.py  test_media_validation.py  test_members.py  test_projects.py  test_sudo.py  test_tags.py
tests/docker/: Dockerfile
tests/integration/: init.sh  vars.env
tests/integration/scenarios/: 01_health_and_docs.hurl  02_login_admin_bootstrapped.hurl  03_members_me_unauthenticated.hurl  04_logout_revokes_session.hurl  05_tags_list_public.hurl  06_tag_admin_full_crud.hurl  07_tag_role_matrix.hurl  08_tag_bulk_create.hurl  09_tag_validation_errors.hurl  10_events_list_public.hurl  11_event_create_leads.hurl  12_event_create_denied_for_member.hurl  13_event_join_then_in_my_events.hurl  14_event_edit_requires_keto_grant.hurl  15_project_create_manager.hurl  16_project_create_denied_for_member.hurl  17_project_lifecycle.hurl  18_project_member_join_leave.hurl  19_project_keto_grant_unlocks_edit.hurl  20_nul_byte_rejected.hurl  21_pagination_bounds.hurl  22_full_journey_lead.hurl  23_manager_project_admin.hurl  24_event_attendance_verify.hurl  25_media_api_and_filter_matrix.hurl  26_event_thumbnail_matrix.hurl  27_sudo_and_audit_gating.hurl  28_member_role_and_deletion.hurl  29_member_directory_and_roles.hurl  30_event_tag_editing.hurl  31_event_attendance_lifecycle.hurl  32_member_events_time_filters.hurl  33_event_date_range_filter.hurl  34_project_invite_accept_flow.hurl  35_project_invite_decline_reinvite.hurl  36_project_request_flow.hurl  37_invite_symmetry_authz.hurl  38_invite_validation_and_policy_gating.hurl  39_member_handshake_moves.hurl  40_tag_delete_in_use_conflict.hurl
utils/: config.py
