[project]
name = "kanae"
version = "0.1.0"
description = "Internal backend server for ACM @ UC Merced"
readme = "README.md"
requires-python = ">=3.9,<4.0"

[tool.pyright]
include = [
    "utils/**",
    "core.py",
    "launcher.py"
]
exclude = [
    "**/__pycache__", 
    "**/.mypy_cache", 
    "**/.dmpypy.json", 
    "docs",
    "docker"
]
reportMissingImports = true
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = "warning"

[tool.bandit]
skips = ["B311", "B101"]

[tool.ruff]
line-length = 80
extend-include = [
    "core.py",
    "launcher.py",
    "utils/**"
]
extend-exclude = ["**/__pycache__"]

[tool.ruff.lint]
ignore = ["E501", "N999", "E402", "S101"]
select = ["E", "F", "N", "ASYNC", "S", "ERA"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true